crates/plotnik-tests/tests/04-emit/bytecode/binding/bare_supertype.txt
Q = (expression)
------------------ DIAGNOSTICS -------------------
error: `expression` is a supertype, not a node kind
 --> query.ptk:1:6
  |
1 | Q = (expression)
  |      ^^^^^^^^^^
  |
help: choose the concrete subtypes of `expression` that this query should match
help: the grammar includes `assignment_expression`, `augmented_assignment_expression`, `await_expression`, `binary_expression`, `jsx_element`, … (7 more)
